// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Modal component renders correctly for a Tech Stack 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="styles__FormWrapper-sc-1o7k5k1-1 iFktw"
      >
        <div
          class="styles__Label-sc-1o7k5k1-0 loicrU"
        >
          Test Stack
        </div>
        <div>
          <div
            class="styles__Label-sc-1o7k5k1-0 loicrU"
          >
            Tech Stack
             Image Url
          </div>
          <input
            class="styles__FormInput-sc-1o7k5k1-2 kHKDTI"
            placeholder="Tech Stack image url"
            value=""
          />
        </div>
        <div>
          <button
            class="styles__SubmitButton-sc-1o7k5k1-3 jToJUi"
            type="submit"
          >
            SUBMIT
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="styles__FormWrapper-sc-1o7k5k1-1 iFktw"
    >
      <div
        class="styles__Label-sc-1o7k5k1-0 loicrU"
      >
        Test Stack
      </div>
      <div>
        <div
          class="styles__Label-sc-1o7k5k1-0 loicrU"
        >
          Tech Stack
           Image Url
        </div>
        <input
          class="styles__FormInput-sc-1o7k5k1-2 kHKDTI"
          placeholder="Tech Stack image url"
          value=""
        />
      </div>
      <div>
        <button
          class="styles__SubmitButton-sc-1o7k5k1-3 jToJUi"
          type="submit"
        >
          SUBMIT
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form Modal component renders correctly for a client 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="styles__FormWrapper-sc-1o7k5k1-1 iFktw"
      >
        <div
          class="styles__Label-sc-1o7k5k1-0 loicrU"
        >
          Test Stack
        </div>
        <div>
          <div
            class="styles__Label-sc-1o7k5k1-0 loicrU"
          >
            Client
             Image Url
          </div>
          <input
            class="styles__FormInput-sc-1o7k5k1-2 kHKDTI"
            placeholder="Client image url"
            value=""
          />
        </div>
        <div>
          <button
            class="styles__SubmitButton-sc-1o7k5k1-3 jToJUi"
            type="submit"
          >
            SUBMIT
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="styles__FormWrapper-sc-1o7k5k1-1 iFktw"
    >
      <div
        class="styles__Label-sc-1o7k5k1-0 loicrU"
      >
        Test Stack
      </div>
      <div>
        <div
          class="styles__Label-sc-1o7k5k1-0 loicrU"
        >
          Client
           Image Url
        </div>
        <input
          class="styles__FormInput-sc-1o7k5k1-2 kHKDTI"
          placeholder="Client image url"
          value=""
        />
      </div>
      <div>
        <button
          class="styles__SubmitButton-sc-1o7k5k1-3 jToJUi"
          type="submit"
        >
          SUBMIT
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
